# api.yaml
@@ -253,6 +253,26 @@ paths:
         500:
           description: Server error   
 
+  /api/arewahub/events/getPastEvents:
+    get:
+      summary: Get past events for arewa hub
+      description: Get past events for arewa hub
+      responses:
+        200:
+          description: Success
+        500:
+          description: Server error   
+
+  /api/arewahub/events/getFutureEvents:
+    get:
+      summary: Get future events for arewa hub
+      description: Get future events for arewa hub
+      responses:
+        200:
+          description: Success
+        500:
+          description: Server error   
+
   /api/arewahub/events/getEvent/{id}:
     get:
       summary: Get a specific events data
