# controllers/arewahub/events.controllers.js
@@ -119,6 +119,36 @@ export async function getEvents(req, res) {
     }
 }
 
+// GET PAST EVENTS
+export async function getPastEvents(req, res) {
+    try {
+        const today = new Date(); // Current date
+        const pastEvents = await EventModel.find({ 
+            eventDate: { $lt: today.toISOString().split('T')[0] } 
+        }).select('-_id');
+
+        res.status(200).json({ success: true, data: pastEvents });
+    } catch (error) {
+        console.error('UNABLE TO GET ALL PAST EVENTS', error);
+        res.status(500).json({ success: false, message: 'Unable to fetch past events' });
+    }
+}
+
+// GET FUTURE EVENTS
+export async function getFutureEvents(req, res) {
+    try {
+        const today = new Date(); // Current date
+        const futureEvents = await EventModel.find({ 
+            eventDate: { $gte: today.toISOString().split('T')[0] } 
+        }).select('-_id');
+
+        res.status(200).json({ success: true, data: futureEvents });
+    } catch (error) {
+        console.error('UNABLE TO GET ALL FUTURE EVENTS', error);
+        res.status(500).json({ success: false, message: 'Unable to fetch future events' });
+    }
+}
+
 //GET A EVENT
 export async function getEvent(req, res) {
     const { id } = req.params
